objects/Category__c.object
<CustomObject>
    <fields>
        <fullName>Help__c</fullName>
        <description>Commercial:
Field added to display the custom help for a specific category in the Opportunity Score Card UI
Release: WW5 2017
PO: Miltos Vratimos</description>
        <inlineHelpText>Custom help text displayed to the user in the scorecard (if populated).</inlineHelpText>
        <label>Help</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Category__c</fullName>
        <formula>Sub_Category__r.Main_Category__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <description>This field will be use for Opportunity Score related Main Category &gt; Sub=Category&gt;Category&gt;Category Value Score.</description>
        <label>Sub-Category</label>
        <referenceTo>Sub_Category__c</referenceTo>
        <relationshipLabel>Categories</relationshipLabel>
        <relationshipName>Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Category</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>